refactor(CarsTest): 불필요한 테스트 제거
- 이미 지동차 객체에서 테스트를 하기 때문에 자동차의 초기 위치 테스트 코드를 제거하였습니다.